--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-phone-number-input": "^3.4.3",
+    "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.11",
     "swiper": "^11.1.4"
   },
