--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material-nextjs": "^5.15.11",
     "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
+    "lenis": "^1.1.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
