--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-phone-number-input": "^3.4.3",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
