--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-hot-toast": "^2.4.1",
     "react-phone-number-input": "^3.4.3",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
     "swiper": "^11.1.4"
   },
