--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.19",
     "@mui/material-nextjs": "^5.15.11",
+    "@react-google-maps/api": "^2.19.3",
     "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
+    "leaflet": "^1.9.4",
     "lenis": "^1.1.2",
+    "mapbox-gl": "^3.4.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.7",
     "react-phone-number-input": "^3.4.3",
     "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0",
